fixed navigation list spacing

--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,7 @@ nav ul{
     display: flex;
     justify-content: center;
 }
+
+nav ul li{
+    margin: 0 15px;
+}
